[TASK] * adjust external urls * new version number

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,8 +1,8 @@
 [general]
-project = Gated Content
-release = 1.0.0
+project = Gatedcontent
+release = 1.0.1
 version = 1.0
-copyright = 2020 by dpool - Hinderink und Thomas Partnerschaft
+copyright = 2021 by dpool - Hinderink und Thomas Partnerschaft
 
 [notify]
 about_new_build = no
@@ -10,14 +10,14 @@ about_new_build = no
 # about_new_build = email-1 [, email2, ...]
 
 [html_theme_options]
-project_contact = dev@dpool.com
+project_contact = daniel.thomas@dpool.com
 use_opensearch =
 project_home =
-project_issues = https://github.com/dpool/typo3-gatedcontent/issues
+project_issues = https://github.com/dpool/gatedcontent/issues
 github_revision_msg =
 github_branch =
 github_repository =
-project_repository = https://github.com/dpool/typo3-gatedcontent.git
+project_repository = https://github.com/dpool/gatedcontent.git
 project_discussions =
 github_sphinx_locale =
 github_commit_hash =
